# commonplace-doc

./: .cbd.json  .gitignore  .workspace.commonplace-sync.json  2026-01-21-can-you-run-the-orchestrator-please.txt  AGENTS.md  CLAUDE.md  CP-lr9-investigation.md  Cargo.toml  README.md  bartleby-changes.txt  bartleby-response.txt  bartleby-test.redb  commonplace.json  continue_prompt.txt  run-bartleby.sh  sandbox.redb  test-sync.sh  workspace.redb  ~  ~1  ~3
.beads/: .commonplace-sync.json  .issues.jsonl.commonplace-sync.json  bd.sock.startlock  issues.jsonl  last-touched  metadata.json  sync_base.jsonl
.beads/backup/: backup_state.json  comments.jsonl  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.claude/: .wiggum-loop.local.md.swp  settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
crates/commonplace-crdt/: Cargo.toml
crates/commonplace-crdt/src/: ack_handler.rs  crdt_merge.rs  crdt_new_file.rs  crdt_publish.rs  crdt_state.rs  lib.rs  test_helpers.rs  yjs.rs  ymap_schema.rs
crates/commonplace-schema/: Cargo.toml
crates/commonplace-schema/src/: content_type.rs  directory.rs  lib.rs  schema_io.rs  uuid_map.rs
crates/commonplace-types/: Cargo.toml
crates/commonplace-types/src/: commit.rs  config.rs  content_type.rs  diff.rs  lib.rs  schema_filename.rs  traits.rs
crates/commonplace-types/src/fs/: actor.rs  error.rs  fork.rs  mod.rs  schema.rs
crates/commonplace-types/src/mqtt/: messages.rs
crates/commonplace-types/src/sync/: events.rs  mod.rs
crates/commonplace-watcher/: Cargo.toml
crates/commonplace-watcher/src/: flock.rs  lib.rs  state.rs  watcher.rs
docs/: API.md  API_TESTING.md  ARCHITECTURE.md  DESIGN_REVIEW.md  DEVELOPMENT.md  DIRECTORY_SYNC_PLAN.md  FILESYSTEM.md  INODE_BRANCH_SYNC.md  MQTT.md  MQTT_TESTING.md  PRESENCE_TESTING.md  README.md  RECURSIVE_SYNC_THEORY.md  ROUTER.md  SANDBOX_LINKING.md  SYNC_PROTECTION.md  TESTING_MQTT_FLOOD_FIX.md  WIRING_DIAGRAM_FILES.md  commonplace-hardlink-sync-spec.md  flock-aware-sync-spec.md
docs/plans/: 2025-01-02-sync-state-persistence-design.md  2025-01-11-unify-inode-cid-tracking.md  2025-12-29-fix-sync-endpoints.md  2025-12-29-orchestrator-implementation.md  2025-12-29-sync-race-condition-fix.md  2025-12-30-commonplace-link-design.md  2025-12-30-flat-directory-json-design.md  2025-12-30-processes-json-design.md  2025-12-30-sync-test-coverage-design.md  2025-12-31-bartleby-integration.md  2026-01-01-path-resolution-design.md  2026-01-02-sandbox-sync-acceptance-criteria.md  2026-01-06-js-evaluator-design.md  2026-01-06-js-evaluator-impl.md  2026-01-08-flock-aware-sync-design.md  2026-01-08-flock-aware-sync.md  2026-01-08-named-workspaces-design.md  2026-01-08-named-workspaces-plan.md  2026-01-12-initial-sync-callback-design.md  2026-01-12-initial-sync-callback.md  2026-01-13-directory-sync-uuid-subscriptions.md  2026-01-21-crdt-peer-sync-design.md  2026-01-27-cyan-sync-protocol-design.md  2026-01-30-cyan-schema-sync-plan.md  2026-03-06-cli-qa-plan.md  2026-03-06-directory-fork-manifest.md  2026-03-07-remove-fs-root-flag.md  2026-03-09-presence-lifecycle-design.md  2026-03-09-three-level-config.md  2026-03-10-presence-lifecycle-plan.md
examples/: .processes.json
examples/python-client/: README.md  counter_example.py  file_process.py  pyproject.toml
history/: CP-1ual-likely-contributors.txt
scripts/: setup-sandbox.sh
sdk/: import-map.json  loader.ts  mod.ts  types.ts
src/: api.rs  b64.rs  cbd.rs  cli.rs  commands.rs  commit.rs  content_type.rs  diff.rs  document.rs  events.rs  files.rs  lib.rs  path.rs  replay.rs  sdk.rs  sse.rs  store.rs  trait_impls.rs  viewer.rs  workspace.rs
src/fs/: error.rs  mod.rs  reconciler.rs  schema.rs
src/http_gateway/: api.rs  mod.rs  sse.rs
src/mqtt/: client.rs  commands.rs  edits.rs  events.rs  messages.rs  mod.rs  request.rs  sync.rs  topics.rs
src/node/: document_node.rs  mod.rs  registry.rs  subscription.rs  types.rs
src/orchestrator/: config.rs  config_reconciler.rs  discovered_manager.rs  discovery.rs  identity.rs  manager.rs  mod.rs  mqtt_watcher.rs  process_discovery.rs  process_utils.rs  schema_visitor.rs  script_resolver.rs  spawn.rs  status.rs
src/router/: error.rs  manager.rs  mod.rs  schema.rs
src/services/: document.rs  event_log.rs  mod.rs
src/sync/: ack_handler.rs  actor_io.rs  ancestry.rs  client.rs  commands.rs  content_type.rs  crdt_merge.rs  crdt_new_file.rs  crdt_publish.rs  crdt_state.rs  dir_sync.rs  directory.rs  error.rs  file_events.rs  file_sync.rs  flock.rs  flock_state.rs  lifecycle_events.rs  missing_parent.rs  mod.rs  peer_fallback.rs  schema_io.rs  sse.rs  state.rs  state_file.rs  subdir_spawn.rs  subscriptions.rs  sync_state_machine.rs  types.rs  urls.rs  uuid_map.rs  watcher.rs  yjs.rs  ymap_schema.rs
src/ws/: connection.rs  handler.rs  mod.rs  room.rs
static/: index.html  style.css  viewer.js
tests/: api_tests.rs  crdt_peer_sync_tests.rs  cyan_sync_integration_tests.rs  document_service_tests.rs  files_api_tests.rs  flock_sync_tests.rs  fs_tests.rs  inode_shadow_test.rs  link_tests.rs  mqtt_sync_handler_tests.rs  mqtt_transport_harness.rs  orchestrator_integration_tests.rs  presence_lifecycle_tests.rs  sse_tests.rs  sync_harness.rs  sync_integration_tests.rs  viewer_tests.rs  watcher_harness.rs  ws_tests.rs
workspace/: .commonplace-sync.json  .commonplace-synced-dirs.json  .commonplace.json  .echo.commonplace-sync.json  __processes.json  mqtt-test.txt  processes.json  tmux-sessions
workspace/bartleby/: .commonplace-sync.json  .commonplace.json  .processes.json  __processes.json  debug-final.txt  debug-test.txt  history.jsonl  input.txt  output.txt  processes.json  prompts.txt  schema-test.txt  system_prompt.txt  test-note.txt  trace-test.txt  trigger-test.txt
workspace/beads/: .commonplace-sync.json  .commonplace.json  __processes.json  commonplace-issues.jsonl  commonplace-issues.open.jsonl  filter-open.ts
workspace/chat/: .commonplace-sync.json  .commonplace.json  __processes.json  chat.ts  index.html
workspace/echo/: .commonplace-sync.json  (+3 more)
(+122 files in other folders)
