[package]
name = "commonplace-doc"
version = "0.1.0"
edition = "2021"

[lib]
name = "commonplace_doc"
path = "src/lib.rs"

[[bin]]
name = "commonplace-server"
path = "src/bin/server.rs"

[[bin]]
name = "commonplace-sync"
path = "src/bin/sync.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yrs = "0.18"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
async-stream = "0.3"
redb = "2.0"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1"
similar = "2.4"
reqwest = { version = "0.11", features = ["json"] }
notify = "6.1"
reqwest-eventsource = "0.5"
base64 = "0.21"
thiserror = "1.0"
urlencoding = "2.1"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.0"
