[package]
name = "commonplace-doc"
version = "0.1.0"
edition = "2021"

[lib]
name = "commonplace_doc"
path = "src/lib.rs"

[[bin]]
name = "commonplace-server"
path = "src/bin/server.rs"

[[bin]]
name = "commonplace-store"
path = "src/bin/store.rs"

[[bin]]
name = "commonplace-http"
path = "src/bin/http.rs"

[[bin]]
name = "commonplace-sync"
path = "src/bin/sync.rs"

[[bin]]
name = "commonplace-orchestrator"
path = "src/bin/orchestrator.rs"

[[bin]]
name = "commonplace-cmd"
path = "src/bin/cmd.rs"

[[bin]]
name = "commonplace-mcp"
path = "src/bin/mcp.rs"

[[bin]]
name = "commonplace-link"
path = "src/bin/link.rs"

[dependencies]
rmcp = { version = "0.12", features = ["server", "transport-io"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yrs = "0.18"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
async-stream = "0.3"
redb = "2.0"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.0", features = ["derive", "env"] }
similar = "2.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
notify = "6.1"
reqwest-eventsource = "0.5"
async-recursion = "1.0"
base64 = "0.21"
thiserror = "1.0"
urlencoding = "2.1"
rumqttc = "0.24"
tokio-stream = "0.1"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.0"
tower = { version = "0.4", features = ["util"] }
