[workspace]
members = ["."]
resolver = "2"

[package]
name = "commonplace-doc"
version = "0.1.0"
edition = "2021"

[lib]
name = "commonplace_doc"
path = "src/lib.rs"

[[bin]]
name = "commonplace-server"
path = "src/bin/server.rs"

[[bin]]
name = "commonplace-store"
path = "src/bin/store.rs"

[[bin]]
name = "commonplace-http"
path = "src/bin/http.rs"

[[bin]]
name = "commonplace-sync"
path = "src/bin/sync.rs"

[[bin]]
name = "commonplace-orchestrator"
path = "src/bin/orchestrator.rs"

[[bin]]
name = "commonplace-cmd"
path = "src/bin/cmd.rs"

[[bin]]
name = "commonplace-mcp"
path = "src/bin/mcp.rs"

[[bin]]
name = "commonplace-link"
path = "src/bin/link.rs"

[[bin]]
name = "commonplace-uuid"
path = "src/bin/uuid.rs"

[[bin]]
name = "commonplace-ps"
path = "src/bin/ps.rs"

[[bin]]
name = "commonplace-signal"
path = "src/bin/signal.rs"

[[bin]]
name = "commonplace-replay"
path = "src/bin/replay.rs"

[[bin]]
name = "commonplace-log"
path = "src/bin/log.rs"

[[bin]]
name = "commonplace-show"
path = "src/bin/show.rs"

[[bin]]
name = "commonplace"
path = "src/bin/commonplace.rs"

[[bin]]
name = "cbd"
path = "src/bin/cbd.rs"

[[bin]]
name = "commonplace-bd"
path = "src/bin/commonplace_bd.rs"

[[bin]]
name = "commonplace-beads-bridge"
path = "src/bin/beads_bridge.rs"

[dependencies]
bytes = "1.5"
rmcp = { version = "0.12", features = ["server", "transport-io"] }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full", "test-util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yrs = "0.18"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
async-stream = "0.3"
redb = "2.0"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.0", features = ["derive", "env"] }
similar = "2.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
notify = "6.1"
reqwest-eventsource = "0.5"
async-recursion = "1.0"
base64 = "0.21"
thiserror = "1.0"
urlencoding = "2.1"
rumqttc = "0.24"
tokio-stream = "0.1"
libc = "0.2"
fs2 = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.0"
tower = { version = "0.4", features = ["util"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
