[package]
name = "commonplace-crdt"
version = "0.1.0"
edition = "2021"

[lib]
name = "commonplace_crdt"
path = "src/lib.rs"

[dependencies]
commonplace-types = { path = "../commonplace-types" }
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["fs", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
yrs = "0.18"
similar = "2.4"

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1", features = ["full", "test-util"] }
