[package]
name = "commonplace-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4", "serde"] }
similar = "2.4"
yrs = "0.18"
