[package]
name = "commonplace-watcher"
version = "0.1.0"
edition = "2021"

[lib]
name = "commonplace_watcher"
path = "src/lib.rs"

[dependencies]
commonplace-types = { path = "../commonplace-types" }
bytes = "1.5"
libc = "0.2"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["fs", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1", features = ["full", "test-util"] }
